# robot-project

./: CMakeLists.txt  main.cpp
cppClientLib/: CMakeLists.txt
cppClientLib/src/: Client.cpp  Server.cpp  commonJsonFunctions.cpp  example_main.cpp
cppClientLib/src/includes/: Client.h  commonJsonFunctions.h
python/: Server.py
src/: .test.cpp.swp  custom_detector.cpp  custom_detector.h  custom_robot.cpp  custom_robot.h  main.cpp  movement.cpp  movement.h  serverStarter.h  spdlog_test.cpp  test.cpp  values.json
